--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>Virtual Cube</title>
     <script src="three.min.js"></script>
     <script src="init.js"></script>
+    <script src="giiker.js"></script>
+    <script src="raphael.min.js"></script>
     <style>
-        body { margin: 0; }
+        body { margin: 0; background-color: #222222 }
         canvas { width: 100%; height: 100% }
     </style>
 </head>
 <body>
-
-<script>
-    // Our Javascript will go here.
-</script>
+<button onclick="connect()">Connect</button>
+<div id="img"></div>
 </body>
 </html>
